support OTLP log export

--- a/examples/express-mysql/solarwinds.apm.config.json
+++ b/examples/express-mysql/solarwinds.apm.config.json
@@ -1,4 +1,5 @@
 {
   "insertTraceContextIntoQueries": true,
-  "insertTraceContextIntoLogs": true
+  "insertTraceContextIntoLogs": true,
+  "exportLogsEnabled": true
 }
