--- a/examples/package.json
+++ b/examples/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.3"
+    "eslint": "^9.9.1",
+    "prettier": "^3.3.3",
+    "typescript": "~5.5.3"
   }
 }
