--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -31,17 +31,14 @@
     "release": "node ../../scripts/publish.js"
   },
   "dependencies": {
-    "@eslint/js": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-deprecation": "^3.0.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-tsdoc": "^0.3.0",
-    "globals": "^15.0.0",
-    "typescript-eslint": "^7.0.2"
+    "@eslint/js": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-notice": "^1.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "typescript-eslint": "^8.3.0"
   },
   "peerDependencies": {
-    "eslint": "^8.56.0",
+    "eslint": "^9.0.0",
     "prettier": "^3.0.0",
     "typescript": ">=4.7.4"
   },
@@ -53,11 +50,12 @@
       "optional": true
     },
     "typescript": {
-      "optional": true
+      "optional": false
     }
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.3"
+    "eslint": "^9.9.1",
+    "prettier": "^3.3.3",
+    "typescript": "~5.5.3"
   }
 }
