--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -90,11 +90,12 @@
     }
   },
   "devDependencies": {
+    "@opentelemetry/api": "^1.3.0",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
     "@types/semver": "^7.5.3",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.3",
+    "eslint": "^9.9.1",
+    "prettier": "^3.3.3",
     "rollup": "^4.3.0",
     "semver": "^7.5.4",
     "typescript": "~5.5.3"
