--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -40,9 +40,10 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.3",
-    "protobufjs-cli": "^1.1.2"
+    "eslint": "^9.9.1",
+    "prettier": "^3.3.3",
+    "protobufjs-cli": "^1.1.2",
+    "typescript": "~5.5.3"
   },
   "engines": {
     "node": ">=16.13.0"
