--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -51,7 +51,9 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.3"
+    "eslint": "^9.9.1",
+    "prettier": "^3.3.3",
+    "rollup": "^4.3.0",
+    "typescript": "~5.5.3"
   }
 }
