--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,8 +11,9 @@
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
     "archiver": "^7.0.0",
-    "eslint": "^8.50.0",
+    "eslint": "^9.9.1",
     "ora": "^5.4.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.3.3",
+    "typescript": "~5.5.3"
   }
 }
