--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -55,6 +55,7 @@
     "@opentelemetry/instrumentation-hapi": "^0.40.0",
     "@opentelemetry/instrumentation-http": "~0.53.0",
     "@opentelemetry/instrumentation-ioredis": "^0.42.0",
+    "@opentelemetry/instrumentation-kafkajs": "^0.3.0",
     "@opentelemetry/instrumentation-knex": "^0.39.0",
     "@opentelemetry/instrumentation-koa": "^0.42.0",
     "@opentelemetry/instrumentation-lru-memoizer": "^0.39.0",
@@ -73,13 +74,14 @@
     "@opentelemetry/instrumentation-router": "^0.39.0",
     "@opentelemetry/instrumentation-socket.io": "^0.41.0",
     "@opentelemetry/instrumentation-tedious": "^0.13.0",
+    "@opentelemetry/instrumentation-undici": "^0.6.0",
     "@opentelemetry/instrumentation-winston": "^0.39.0",
     "@opentelemetry/resource-detector-aws": "^1.3.1",
     "@opentelemetry/resource-detector-azure": "^0.2.4",
     "@opentelemetry/resource-detector-container": "^0.4.0",
+    "@opentelemetry/resource-detector-gcp": "^0.29.11",
     "@opentelemetry/resources": "~1.26.0",
-    "@opentelemetry/winston-transport": "^0.6.0",
-    "@solarwinds-apm/module": "workspace:^"
+    "@opentelemetry/winston-transport": "^0.6.0"
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.3.0"
