--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -79,9 +79,9 @@
     "@opentelemetry/resource-detector-aws": "^1.3.1",
     "@opentelemetry/resource-detector-azure": "^0.2.4",
     "@opentelemetry/resource-detector-container": "^0.4.0",
-    "@opentelemetry/resource-detector-gcp": "^0.29.11",
     "@opentelemetry/resources": "~1.26.0",
-    "@opentelemetry/winston-transport": "^0.6.0"
+    "@opentelemetry/winston-transport": "^0.6.0",
+    "@solarwinds-apm/module": "workspace:^"
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.3.0"
