--- a/docker/otel-collector/config.yml
+++ b/docker/otel-collector/config.yml
@@ -1,8 +1,8 @@
 receivers:
   otlp:
     protocols:
-      grpc:
-        endpoint: otel-collector:4317
+      http:
+        endpoint: otel-collector:4318
 
 processors:
   batch:
