--- a/turbo.json
+++ b/turbo.json
@@ -18,25 +18,20 @@
       ]
     },
     "lint": {
-      "dependsOn": ["^build"],
-      "outputs": []
+      "dependsOn": ["^build"]
     },
     "lint:fix": {
-      "dependsOn": ["^build"],
-      "outputs": []
+      "dependsOn": ["^build"]
     },
     "release": {
-      "dependsOn": ["^release"],
-      "outputs": []
+      "dependsOn": ["^release"]
     },
     "start": {
-      "dependsOn": ["build"],
-      "outputs": []
+      "dependsOn": ["build"]
     },
     "test": {
       "dependsOn": ["@solarwinds-apm/test#build", "build"],
-      "inputs": ["package.json", "tsconfig.json", "src/**", "test/**"],
-      "outputs": []
+      "inputs": ["package.json", "tsconfig.json", "src/**", "test/**"]
     }
   },
   "globalDependencies": [
@@ -48,5 +43,11 @@
     "yarn.lock",
     "packages/eslint-config/index.js"
   ],
-  "globalPassThroughEnv": ["SW_APM_*", "OTEL_*", "NODE_ENV", "GITHUB_TOKEN"]
+  "globalPassThroughEnv": [
+    "SW_APM_*",
+    "OTEL_*",
+    "AWS_LAMBDA_*",
+    "NODE_ENV",
+    "GITHUB_TOKEN"
+  ]
 }
