--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,7 +6,13 @@ on:
 
 jobs:
   checks:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
     steps:
       - uses: actions/checkout@v4
         with:
@@ -46,7 +52,7 @@ jobs:
       # we can force it to be the root of the repo by including an empty file present at the root
       # see https://github.com/actions/upload-artifact#upload-using-multiple-paths-and-exclusions
       - run: touch .root
-      - if: github.event_name == 'pull_request'
+      - if: matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: build
