--- a/packages/bindings/npm/linux-x64-musl/package.json
+++ b/packages/bindings/npm/linux-x64-musl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/bindings-linux-x64-musl",
-  "version": "1.0.2",
+  "version": "2.0.0-pre.1",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
