--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -116,8 +116,7 @@ jobs:
             aws lambda publish-layer-version \
               --layer-name $LAYER_NAME \
               --license-info "Apache 2.0" \
-              --compatible-architectures x86_64 arm64 \
-              --compatible-runtimes nodejs20.x nodejs18.x nodejs16.x \
+              --compatible-runtimes nodejs20.x nodejs18.x \
               --zip-file fileb://layer.zip \
               --query 'LayerVersionArn' \
               --output text
