--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -77,6 +77,7 @@
     "@solarwinds-apm/sampling": "workspace:^",
     "json-stringify-safe": "^5.0.1",
     "node-releases": "^2.0.18",
+    "semver": "^7.6.3",
     "zod": "^3.23.8"
   },
   "peerDependencies": {
