--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -31,7 +31,8 @@
     "build": "tsc && node ./dist/compatibility.js",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
-    "release": "node ../../scripts/publish.js"
+    "release": "node ../../scripts/publish.js",
+    "scan": "node ../../scripts/scan.js"
   },
   "dependencies": {
     "@opentelemetry/instrumentation": "~0.54.0",
