--- a/packages/bindings/npm/linux-x64-gnu/package.json
+++ b/packages/bindings/npm/linux-x64-gnu/package.json
@@ -8,7 +8,8 @@
     "directory": "packages/bindings/npm/linux-x64-gnu"
   },
   "scripts": {
-    "release": "node ../../../../scripts/publish.js"
+    "release": "node ../../../../scripts/publish.js",
+    "scan": "node ../../../../scripts/scan.js"
   },
   "os": [
     "linux"
