--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -32,7 +32,8 @@
     "build": "tsc",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
-    "release": "node ../../scripts/publish.js"
+    "release": "node ../../scripts/publish.js",
+    "scan": "node ../../scripts/scan.js"
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
