--- a/packages/proto/package.json
+++ b/packages/proto/package.json
@@ -31,7 +31,8 @@
     "build": "node build.js",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
-    "release": "node ../../scripts/publish.js"
+    "release": "node ../../scripts/publish.js",
+    "scan": "node ../../scripts/scan.js"
   },
   "dependencies": {
     "protobufjs": "^7.4.0"
