--- a/packages/sampling/package.json
+++ b/packages/sampling/package.json
@@ -32,6 +32,7 @@
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "release": "node ../../scripts/publish.js",
+    "scan": "node ../../scripts/scan.js",
     "test": "swtest -p test/tsconfig.json -c src"
   },
   "dependencies": {
