mark version bumps

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,17 +1,23 @@
 changesetIgnorePatterns:
-  - "packages/*/test/**"
-  - "packages/bindings/npm/**"
+  - packages/*/test/**
+  - packages/bindings/npm/**
 
-initScope: "@solarwinds-apm"
+enableGlobalCache: false
+
 initFields:
   license: Apache-2.0
   publishConfig:
     access: public
     provenance: true
 
+initScope: "@solarwinds-apm"
+
 nodeLinker: node-modules
-enableGlobalCache: false
+
 npmPublishAccess: public
-preferDeferredVersions: true
-preferInteractive: true
+
 pnpFallbackMode: none
+
+preferDeferredVersions: true
+
+preferInteractive: true
