--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -17,6 +17,9 @@
   "exports": {
     ".": {
       "import": "./dist/index.js"
+    },
+    "./web": {
+      "import": "./dist/web/index.js"
     }
   },
   "files": [
@@ -36,6 +39,7 @@
     "test": "swtest -p test/tsconfig.json -c src"
   },
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-web": "^0.45.0",
     "@opentelemetry/core": "~1.30.0",
     "@opentelemetry/instrumentation": "~0.57.0",
     "@opentelemetry/instrumentation-amqplib": "^0.46.0",
@@ -81,11 +85,13 @@
     "@opentelemetry/resource-detector-azure": "^0.5.0",
     "@opentelemetry/resource-detector-container": "^0.5.0",
     "@opentelemetry/resources": "~1.30.0",
+    "@opentelemetry/semantic-conventions": "~1.28.0",
     "@opentelemetry/winston-transport": "^0.10.0",
     "@solarwinds-apm/module": "workspace:^"
   },
   "peerDependencies": {
-    "@opentelemetry/api": "^1.9.0"
+    "@opentelemetry/api": "^1.9.0",
+    "zone.js": "^0.13.0 || ^0.14.0 || ^0.15.0"
   },
   "peerDependenciesMeta": {
     "@opentelemetry/api": {
@@ -100,7 +106,8 @@
     "eslint": "^9.12.0",
     "prettier": "^3.3.3",
     "semver": "^7.6.3",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "zone.js": "^0.15.0"
   },
   "engines": {
     "node": "^18.19.0 || ^20.8.0 || >=22.0.0"
