--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -85,7 +85,7 @@
     "json-stringify-safe": "^5.0.1",
     "node-releases": "^2.0.18",
     "semver": "^7.6.3",
-    "valibot": "1.0.0-beta.15"
+    "valibot": "1.0.0-rc.0"
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.9.0"
