--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -84,6 +84,7 @@
     "@opentelemetry/resource-detector-aws": "^1.3.1",
     "@opentelemetry/resource-detector-azure": "^0.6.0",
     "@opentelemetry/resource-detector-container": "^0.6.0",
+    "@opentelemetry/resource-detector-gcp": "^0.33.0",
     "@opentelemetry/resources": "~1.30.0",
     "@opentelemetry/semantic-conventions": "~1.30.0",
     "@opentelemetry/winston-transport": "^0.10.0",
