--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -39,6 +39,7 @@
     "test": "swtest -p test/tsconfig.json -c src"
   },
   "dependencies": {
+    "@fastify/otel": "^0.4.0",
     "@opentelemetry/auto-instrumentations-web": "^0.45.0",
     "@opentelemetry/core": "~1.30.0",
     "@opentelemetry/instrumentation": "~0.57.0",
@@ -52,7 +53,6 @@
     "@opentelemetry/instrumentation-dataloader": "^0.16.0",
     "@opentelemetry/instrumentation-dns": "^0.43.0",
     "@opentelemetry/instrumentation-express": "^0.47.0",
-    "@opentelemetry/instrumentation-fastify": "^0.44.0",
     "@opentelemetry/instrumentation-fs": "^0.19.0",
     "@opentelemetry/instrumentation-generic-pool": "^0.43.0",
     "@opentelemetry/instrumentation-graphql": "^0.47.0",
