--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -81,6 +81,7 @@
     "@opentelemetry/instrumentation-tedious": "^0.18.0",
     "@opentelemetry/instrumentation-undici": "^0.10.0",
     "@opentelemetry/instrumentation-winston": "^0.44.0",
+    "@opentelemetry/opentelemetry-browser-detector": "~0.57.0",
     "@opentelemetry/resource-detector-aws": "^1.3.1",
     "@opentelemetry/resource-detector-azure": "^0.6.0",
     "@opentelemetry/resource-detector-container": "^0.6.0",
