--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -62,20 +62,20 @@
     "test": "swtest -p test/tsconfig.json -c src"
   },
   "dependencies": {
-    "@opentelemetry/api-logs": "~0.57.0",
-    "@opentelemetry/context-zone": "~1.30.0",
-    "@opentelemetry/core": "~1.30.0",
-    "@opentelemetry/exporter-logs-otlp-proto": "~0.57.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "~0.57.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "~0.57.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "~0.57.0",
-    "@opentelemetry/instrumentation": "~0.57.0",
-    "@opentelemetry/resources": "~1.30.0",
-    "@opentelemetry/sdk-logs": "~0.57.0",
-    "@opentelemetry/sdk-metrics": "~1.30.0",
-    "@opentelemetry/sdk-trace-base": "~1.30.0",
-    "@opentelemetry/sdk-trace-node": "~1.30.0",
-    "@opentelemetry/sdk-trace-web": "~1.30.0",
+    "@opentelemetry/api-logs": "^0.200.0",
+    "@opentelemetry/context-zone": "^2.0.0",
+    "@opentelemetry/core": "^2.0.0",
+    "@opentelemetry/exporter-logs-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.200.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
+    "@opentelemetry/instrumentation": "^0.200.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-logs": "^0.200.0",
+    "@opentelemetry/sdk-metrics": "^2.0.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.0",
+    "@opentelemetry/sdk-trace-web": "^2.0.0",
     "@opentelemetry/semantic-conventions": "~1.30.0",
     "@solarwinds-apm/bindings": "workspace:^",
     "@solarwinds-apm/dependencies": "workspace:^",
