--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -70,6 +70,7 @@
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.200.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
     "@opentelemetry/instrumentation": "^0.200.0",
+    "@opentelemetry/otlp-exporter-base": "^0.200.0",
     "@opentelemetry/resources": "^2.0.0",
     "@opentelemetry/sdk-logs": "^0.200.0",
     "@opentelemetry/sdk-metrics": "^2.0.0",
