--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -106,6 +106,11 @@ jobs:
           - 22-debian
           - 22-ubi
           - 22-ubuntu
+          - 24-alpine
+          - 24-amazonlinux
+          - 24-debian
+          - 24-ubi
+          - 24-ubuntu
         arch:
           - x64
           - arm64
@@ -116,6 +121,8 @@ jobs:
           - image: 20-alpine
             arch: arm64
           - image: 22-alpine
+            arch: arm64
+          - image: 24-alpine
             arch: arm64
       fail-fast: false
     container:
