--- a/packages/histogram/package.json
+++ b/packages/histogram/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/histogram",
-  "version": "2.1.0-pre.4",
+  "version": "2.1.0",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -45,6 +45,5 @@
   },
   "engines": {
     "node": "^18.19.0 || ^20.8.0 || >=22.0.0"
-  },
-  "stableVersion": "2.0.1"
+  }
 }
