--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -215,8 +215,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+      - run: corepack enable
 
+      - uses: actions/cache@v4
+        with:
+          path: .yarn/cache
+          key: yarn-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            yarn-
+
+      - run: yarn install --immutable
       - run: node -e "require('assert').ok(${OP} require('${FILE}'))"
         env:
-          OP: ${{ matrix.pass && '' || '!' }}
+          OP: ${{ !matrix.pass && '!' || '' }}
           FILE: ./packages/solarwinds-apm/dist/commonjs/version.js
