--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: 22
+          package-manager-cache: false
       - run: corepack enable
 
       - uses: actions/cache@v4
@@ -55,6 +56,7 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: 22
+          package-manager-cache: false
       - run: corepack enable
 
       - uses: actions/cache@v4
@@ -163,6 +165,7 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: ${{ matrix.node }}
+          package-manager-cache: false
       - run: corepack enable
 
       - uses: actions/cache@v4
@@ -215,6 +218,7 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: ${{ matrix.node }}
+          package-manager-cache: false
 
       - run: rm package.json && rm yarn.lock && npm install --no-save node-releases
       - run: node -e "require('assert').ok(${OP} require('${FILE}'))"
