--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -47,6 +47,7 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: 22
+          package-manager-cache: false
       - run: corepack enable
 
       - run: yarn install
