--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: 22
+          package-manager-cache: false
       - run: corepack enable
 
       - run: yarn install
