--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 22
           registry-url: https://npm.pkg.github.com
+          package-manager-cache: false
       - run: corepack enable
 
       - uses: actions/cache@v4
