--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -14,6 +14,7 @@
   "bugs": {
     "url": "https://github.com/solarwinds/apm-js/issues"
   },
+  "homepage": "https://github.com/solarwinds/apm-js/tree/main/packages/solarwinds-apm#readme",
   "keywords": [
     "tracing",
     "instrumentation",
