--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/solarwinds/apm-js/issues"
   },
-  "type": "commonjs",
+  "type": "module",
   "exports": {
     ".": "./index.js"
   },
