--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,13 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["build.js", "package.json", "tsconfig.json", "src/**"],
+      "inputs": [
+        "build.js",
+        "build.*.js",
+        "package.json",
+        "tsconfig.json",
+        "src/**"
+      ],
       "outputs": ["dist/**", ".next/**", "COMPATIBILITY.md"]
     },
     "lint": {
