--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -50,6 +50,15 @@
     "./CHANGELOG.md",
     "./CONFIGURATION.md"
   ],
+  "sideEffects": [
+    "./src/index.ts",
+    "./src/web/index.ts",
+    "./src/commonjs/index.js",
+    "./dist/index.js",
+    "./dist/web/index.js",
+    "./dist/commonjs/index.js",
+    "./dist/web.js"
+  ],
   "publishConfig": {
     "access": "public",
     "provenance": true
@@ -86,6 +95,7 @@
     "json-stringify-safe": "^5.0.1",
     "node-releases": "^2.0.18",
     "semver": "^7.6.3",
+    "undici": "^7.16.0",
     "valibot": "^1.0.0"
   },
   "peerDependencies": {
