--- a/packages/sampling/package.json
+++ b/packages/sampling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/sampling",
-  "version": "3.1.0",
+  "version": "3.1.1-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -60,5 +60,6 @@
   },
   "engines": {
     "node": "^18.19.0 || ^20.8.0 || >=22.0.0"
-  }
+  },
+  "stableVersion": "3.1.0"
 }
