--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lambda": "node scripts/lambda.js",
     "lint": "prettier --check *.json *.md .github && turbo run lint --continue",
     "lint:fix": "prettier --write *.json *.md .github && turbo run lint:fix --continue",
-    "publish": "turbo run build && turbo run release",
+    "publish": "turbo run build && turbo run release --env-mode=loose",
     "scan": "turbo run scan && node scripts/lambda.js solarwinds-apm && node scripts/scan.js",
     "test": "turbo run test --continue",
     "test:watch": "turbo watch test",
