--- a/examples/next-prisma/package.json
+++ b/examples/next-prisma/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@solarwinds-apm/example-next-prisma",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "prisma generate && prisma migrate deploy && next build",
     "lint": "ESLINT_USE_FLAT_CONFIG=false next lint",
@@ -8,8 +9,9 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@prisma/client": "^6.19.0",
-    "@prisma/instrumentation": "^6.19.0",
+    "@prisma/adapter-better-sqlite3": "^7.0.1",
+    "@prisma/client": "^7.0.1",
+    "@prisma/instrumentation": "^7.0.1",
     "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -20,7 +22,7 @@
     "@types/react": "^19.2.2",
     "eslint": "^9.39.1",
     "eslint-config-next": "^15.5.6",
-    "prisma": "^6.19.0",
+    "prisma": "^7.0.1",
     "typescript": "~5.9.3"
   }
 }
