--- a/packages/dependencies/package.json
+++ b/packages/dependencies/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/dependencies",
-  "version": "2.0.1",
+  "version": "2.0.2-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -48,5 +48,6 @@
   },
   "engines": {
     "node": "^18.19.0 || ^20.8.0 || >=22.0.0"
-  }
+  },
+  "stableVersion": "2.0.1"
 }
