--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/eslint-config",
-  "version": "3.0.0",
+  "version": "3.0.1-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -57,5 +57,6 @@
     "eslint": "^9.39.1",
     "prettier": "^3.6.2",
     "typescript": "~5.9.3"
-  }
+  },
+  "stableVersion": "3.0.0"
 }
